--- a/sparks/views/view.ejs
+++ b/sparks/views/view.ejs
@@ -7,12 +7,14 @@
     
         <center>
             <div class="shadow-lg p-3 mb-5 mt-5 bg-white rounded text-center w-50">
-
-                <strong>Name:    </strong> <%=  alldata[i].name  %><br>
-                <strong>Email:   </strong><%=  alldata[i].email  %><br>
-                <strong>Amount:  </strong><%=  alldata[i].amount  %><br>
-            
+<h1>THE SPARKS FOUNDATION</h1>
+<hr>
+                <h3><%=  alldata[i].name  %></h3> 
+               <h3><%=  alldata[i].email  %></h3><br>
+               <h3><%=  alldata[i].amount  %></h3><br>
+                <a href="/transaction"><button type="button" class="btn btn-primary mb-2">Back</button></a>
             </div>
+            
         </center>
     <% } %>
 
