--- a/sparks/views/transfer.ejs
+++ b/sparks/views/transfer.ejs
@@ -4,14 +4,14 @@
 
     <%- include('nav.ejs') %>
     <center>
-    <div class="shadow-lg p-3 mb-5 mt-5 bg-white rounded text-center w-75">
+    <div class="shadow-lg p-3 mb-5 mt-5 bg-white rounded text-center w-50">
     <form method="POST" action="/transaction" >
         <div class="form-group row" >
           <label for="static ID" class="col-sm-2 col-form-label">Transfer From (ID)</label>
           <div class="col-sm-10">
             <input type="text" readonly class="form-control-plaintext" name="id" id="staticEmail" value="<%= alldata[0]._id%>">
           </div>
-        </div>
+        </div><hr>
         <div class="form-group row">
           <label for="inputPassword" class="col-sm-2 col-form-label">Transfer To (Name)</label>
           <div class="col-sm-10">
@@ -24,12 +24,19 @@
             <div class="col-sm-10">
               <input type="number" class="form-control" id="name" name="amount" placeholder="Enter Amount To Transfer">
             </div>
-          </div>
-
-          <button type="submit" class="btn btn-primary mb-2">Transfer</button>
+          </div><hr>
+          <a href="/transaction"><button type="button" class="btn btn-primary mb-2">Back</button></a>
+          <button type="submit" class="btn btn-primary mb-2" onclick="myFunction()">Transfer</button>
       </form>
 </div>
 </center>
     <%- include('footer.ejs') %>
 </body>
+
+<script>
+  function myFunction() {
+    alert("You Successfully Transfer Money");
+    console.log(alldata[0]);
+}
+</script>
 </html>
