--- a/sparks/views/transaction.ejs
+++ b/sparks/views/transaction.ejs
@@ -5,8 +5,8 @@
     <%- include('nav.ejs') %>
 
     <center>
-      <div class="shadow-lg p-3 mb-5 mt-5 bg-white rounded text-center w-75">
-    <table class="table table-hover center">
+      <div class="shadow-lg p-3 mt-5 mb-5 bg-white rounded text-center w-75">
+    <table class="table table-hover center ">
         <thead>
           <tr>
             <th scope="col">ID</th>
