--- a/sparks/styles/home.css
+++ b/sparks/styles/home.css
@@ -1,29 +1,32 @@
 blink {
-    -webkit-animation: 2s linear infinite condemned_blink_effect; /* for Safari 4.0 - 8.0 */
+    -webkit-animation: 2s linear infinite condemned_blink_effect;
+    /* for Safari 4.0 - 8.0 */
     animation: 2s linear infinite condemned_blink_effect;
-  }
-  
-  /* for Safari 4.0 - 8.0 */
-  @-webkit-keyframes condemned_blink_effect { 
+}
+
+
+/* for Safari 4.0 - 8.0 */
+
+@-webkit-keyframes condemned_blink_effect {
     0% {
-      visibility: hidden;
+        visibility: hidden;
     }
     50% {
-      visibility: hidden;
+        visibility: hidden;
     }
     100% {
-      visibility: visible;
+        visibility: visible;
     }
-  }
-  
-  @keyframes condemned_blink_effect {
+}
+
+@keyframes condemned_blink_effect {
     0% {
-      visibility: hidden;
+        visibility: hidden;
     }
     50% {
-      visibility: hidden;
+        visibility: hidden;
     }
     100% {
-      visibility: visible;
+        visibility: visible;
     }
-  }
+}
