--- a/sparks/views/footer.ejs
+++ b/sparks/views/footer.ejs
@@ -1,68 +1,74 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-footer{
-  position: fixed;
-  left : 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-}
-.fa {
-  padding: 10px;
-  font-size: 15px;
-  width: 30px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-}
-.fa:hover {
-    opacity: 0.7;
-}
-.fa-facebook {
-  background: #3B5998;
-  color: white;
-}
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+    }
 
-.fa-twitter {
-  background: #55ACEE;
-  color: white;
-}
+    .fa {
+      padding: 10px;
+      font-size: 15px;
+      width: 30px;
+      text-align: center;
+      text-decoration: none;
+      margin: 5px 2px;
+    }
 
-.fa-google {
-  background: #dd4b39;
-  color: white;
-}
+    .fa:hover {
+      opacity: 0.7;
+    }
 
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
+    .fa-facebook {
+      background: #3B5998;
+      color: white;
+    }
 
-.fa-youtube {
-  background: #bb0000;
-  color: white;
-}
+    .fa-twitter {
+      background: #55ACEE;
+      color: white;
+    }
 
-.fa-instagram {
-  background: #125688;
-  color: white;
-}
+    .fa-google {
+      background: #dd4b39;
+      color: white;
+    }
 
-</style>
-<body >
+    .fa-linkedin {
+      background: #007bb5;
+      color: white;
+    }
 
-  <footer class="bg-dark text-white"><center>
-        <a href="https://www.facebook.com/thesparksfoundation.info" class="fa fa-facebook" target="_blank"></a>
-        <a href="https://twitter.com/tsfsingapore" class="fa fa-twitter" target="_blank"></a>
-        <a href="https://www.thesparksfoundationsingapore.org/" class="fa fa-google" target="_blank"></a>
-         <a href="https://www.linkedin.com/company/the-sparks-foundation/" class="fa fa-linkedin" target="_blank"></a>
-        <a href="https://www.instagram.com/thesparksfoundation.info/" class="fa fa-instagram" target="_blank"></a>
-  </center><center>
+    .fa-youtube {
+      background: #bb0000;
+      color: white;
+    }
+
+    .fa-instagram {
+      background: #125688;
+      color: white;
+    }
+  </style>
+
+<body>
+
+  <footer class="bg-dark text-white">
+    <center>
+      <a href="https://www.facebook.com/thesparksfoundation.info" class="fa fa-facebook" target="_blank"></a>
+      <a href="https://twitter.com/tsfsingapore" class="fa fa-twitter" target="_blank"></a>
+      <a href="https://www.thesparksfoundationsingapore.org/" class="fa fa-google" target="_blank"></a>
+      <a href="https://www.linkedin.com/company/the-sparks-foundation/" class="fa fa-linkedin" target="_blank"></a>
+      <a href="https://www.instagram.com/thesparksfoundation.info/" class="fa fa-instagram" target="_blank"></a>
+    </center>
+    <center>
       Copyright &copy; The Sparks Foundation 2020
-  </center>
+    </center>
   </footer>
 </body>
