--- a/sparks/views/nav.ejs
+++ b/sparks/views/nav.ejs
@@ -1,13 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-    <a class="navbar-brand text-white" href="/home">THE SPARKS FOUNDATION</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link active text-white" href="/home">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link text-white" href="/transaction">Transaction</a>
-        <a class="nav-item nav-link text-white" href="/add">Add User</a>
-      </div>
+  <a class="navbar-brand text-white" href="/home">THE SPARKS FOUNDATION</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav ml-auto">
+      <a class="nav-item nav-link active text-white" href="/home">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link text-white" href="/transaction">Transaction</a>
+      <a class="nav-item nav-link text-white" href="/add">Add User</a>
     </div>
-  </nav>
+  </div>
+</nav>
